# RE2RNN

./: .git-blame-ignore-revs  .gitignore  README.md  pyproject.toml
src/: RE.py  create_automata.py  data.py  decompose_automata.py  main.py  train.py  val.py
src/models/: Baseline.py  FARNN.py  FARNN_O.py  net.py
src/rules/: create_logic_mat_bias.py  dfa_from_rule.py  fsa_to_tensor.py  load_data_and_rules.py  reverse_regex.py  rule_tokenizer.py  tensor_func.py
src/utils/: utils.py  utils_hotswap.py
src_simple/: FARNN_min.py  main_min.py  train_farnn.py  val_min.py
