[project]
name = "re2rnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "torch>=2.6.0",
    "pyparsing>=3.2.3",
    "pydash>=8.0.5",
    "automata-tools>=2.0.1",
    "tensorly>=0.9.0",
    "tqdm>=4.67.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
